[gd_scene load_steps=2 format=3 uid="uid://basw62h85rk21"]

[ext_resource type="Script" uid="uid://c4bkoh6le86oe" path="res://scenes/components/interactable_component.gd" id="1_onphe"]

[node name="InteractableComponent" type="Area2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_onphe")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
